sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  
  for (i <- 1 to getNombreValeurs()-1) {
    
    var min = i
    
    for (j <- i+1 to n) {
      
      if (plusPetit(j,min)) {
        
        min = j
        
      }
      
    }
    
    if (min != i) {
      
      echange(i,min)
      
    }
    
  }
  
}




/* procédure tri_selection(tableau t, entier n)
      pour i de 1 à n - 1
          min ← i
          pour j de i + 1 à n
              si t[j] < t[min], alors min ← j
          fin pour
          si min ≠ i, alors échanger t[i] et t[min]
      fin pour
  fin procédure

